# genvoy-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: architecture.md  overview.md  setup.md
docs/release/: CHECKLIST.md  README.md  RELEASE_NOTES_TEMPLATE.md
genvoy/: __init__.py  config.py  errors.py  fal_client.py  filesystem.py  models.py  server.py
scripts/: check_docs_consistency.py
tests/: test_config.py  test_fal_client.py  test_fal_client_additional.py  test_filesystem.py  test_models.py  test_server_contract.py  test_server_generation.py  test_server_tools.py
